<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <ImageView
                android:id="@+id/img_vacation"
                android:layout_width="160dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:background="@drawable/rounded_shape_search_view"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/outfit_medium"
                android:text="@string/title"
                android:textSize="19sp"
                card_view:layout_constraintStart_toEndOf="@+id/img_vacation"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/outfit_medium"
                android:text="@string/location"
                android:textSize="12sp"
                card_view:layout_constraintStart_toEndOf="@+id/img_vacation"
                card_view:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/baseline_star_outline_24"
                android:paddingTop="8dp"
                android:text="@string/rating"
                android:textSize="20sp"
                card_view:layout_constraintStart_toEndOf="@+id/img_vacation"
                card_view:layout_constraintTop_toBottomOf="@+id/location" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>